Fix size being >100% on mobile chrome browsers
Chrome on mobile has a special hiding url bar at the top which is
apparently counted in the vh unit, but not the % unit.

--- a/src/global.css
+++ b/src/global.css
@@ -2,9 +2,13 @@
 	font-family: sans-serif;
 }
 
+:root, body {
+	width: 100%;
+	height: 100%;
+}
+
 body {
 	margin: 0;
-	min-height: 100vh;
 	display: flex;
 	align-content: stretch;
 	justify-content: stretch;
